Add new example model

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <canvas id="canvas" width="640" height="480">
       This page is not supported by your web browser.
     </canvas>
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
